# test_gmp_mpir

./: Cargo.toml  README.md  build.rs
mpir/lib/: libgmp-10.lib  libgmpxx-4.lib
src/: main.rs
