[package]
name = "test_gmp_mpir"
version = "0.2.3" # change with html_root_url in main.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "test gmp mpir for Rust"
keywords = ["mpir", "gmp", "mpfr", "multiple-precision", "bignum"]
categories = ["mathematics", "science", "external-ffi-bindings"]
license = "MIT"

documentation = "https://docs.rs/test_gmp_mpir/"
homepage = "https://crates.io/crates/test_gmp_mpir"
repository = "https://github.com/nomissbowling/test_gmp_mpir"

readme = "README.md"

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpir = { version = ">=0.2.3" }

home = { version = "=0.5.5" } # cc(1.0.79)/bindgen(0.65.1) requires home(0.5.5)

once_cell = { version = "=1.20.3" } # skip 1.21.0

serial_test = { version = "=3.2.0" }

[build-dependencies]
cc = "=1.0.79"
bindgen = "=0.65.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]